<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"  
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<ScrollView
	android:fadingEdge="none"     
	android:layout_width="match_parent"
    android:layout_height="match_parent">
	    <LinearLayout
	    android:padding="10dp"
	    android:orientation="vertical"      
	    android:layout_width="match_parent"
    	android:layout_height="match_parent">
	         <LinearLayout     
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    <TextView 
		    android:text="@string/p1"
		    android:id="@+id/setting_problem_p1"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		         
		    <TextView 
		    android:text="@string/a1"
		    android:id="@+id/setting_problem_a1"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:background="@color/gray_light"
		    android:padding="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		    </LinearLayout>
		    
	        <LinearLayout
	        android:layout_marginTop="10dp"     
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    <TextView 
		    android:text="@string/p2"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		         
		    <TextView 
		    android:text="@string/a2"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:background="@color/gray_light"
		    android:padding="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		    </LinearLayout>    
		    
	        <LinearLayout
	        android:layout_marginTop="10dp"     
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    <TextView 
		    android:text="@string/p3"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		         
		    <TextView 
		    android:text="@string/a3"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:background="@color/gray_light"
		    android:padding="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		    </LinearLayout>        
		    
	            <LinearLayout
	        android:layout_marginTop="10dp"     
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    <TextView 
		    android:text="@string/p4"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		         
		    <TextView 
		    android:text="@string/a4"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:background="@color/gray_light"
		    android:padding="10dp"		 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		    </LinearLayout>      
		      <LinearLayout
	        android:layout_marginTop="10dp"     
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    <TextView 
		    android:text="@string/p5"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		         
		    <TextView 
		    android:text="@string/a5"
		  	android:textSize="@dimen/BasicTextSize"
		  	android:textColor="@color/black"
		    android:lineSpacingMultiplier="1.2"
		    android:layout_marginBottom="2dp"
		    android:background="@color/gray_light"
		    android:padding="10dp"		 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
		    </LinearLayout>          
	    </LinearLayout>
	    
	</ScrollView>
   

</LinearLayout>