<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gray_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	android:layout_margin="15dp"    
	android:orientation="horizontal"
	android:gravity="center_vertical"
	android:layout_width="match_parent"
    android:layout_height="wrap_content">
	    <ImageView 
	    android:src="@drawable/biz_pc_main_mall_icon_1"    
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"/>
	    
	     <ImageView 
	    android:src="@drawable/current_remain_sum"    
	    android:layout_marginLeft="5dp"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"/>
	     
	     <TextView 
	    android:id="@+id/bonus_gain_coin_wealth"     
	    android:text="0"
	    android:textColor="@color/coin_yellow"
	    android:textSize="@dimen/TitleTextSize"
	    android:textStyle="bold"
	    android:layout_marginLeft="2dp"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"/>
	     
	    <ImageView
	    android:src="@drawable/biz_pc_main_money_big_icon"   
	    android:layout_marginLeft="10dp"  	    
	    android:paddingBottom="5dp"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"/> 
	</LinearLayout>
	
	<View 	    
	    android:background="@drawable/list_divider_line"
	    android:layout_width="match_parent"
    	android:layout_height="1dp"/>
	
	<LinearLayout 
	android:orientation="vertical"
	android:layout_marginTop="20dp"
	android:layout_width="match_parent"
    android:layout_height="wrap_content">
	    <Button 	
	    android:id="@+id/bonus_gain_coin_btnGetCoin"    
	    android:text="@string/btn_gain_coin"    
	    android:textSize="@dimen/LargeTextSize"
	    android:padding="12dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:textColor="@color/white"
	   
	    android:background="@drawable/action_btn_1"    
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	    <!-- vip -->
	    <Button 	
	    android:id="@+id/bonus_gain_coin_btnVip"        
	    android:text="@string/btn_vip"    
	    android:textSize="@dimen/LargeTextSize"
	    android:padding="12dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:textColor="@color/gray_dark"	   
	    android:background="@drawable/action_btn_2"    
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	    <!-- 广告 -->
	    <Button 	
	    android:id="@+id/bonus_gain_coin_btnRemoveAd"        
	    android:text="@string/btn_remove_ad"    
	    android:textSize="@dimen/LargeTextSize"
	    android:padding="12dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:textColor="@color/gray_dark"
	   
	    android:background="@drawable/action_btn_2"    
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>